--- a/nbs/00_audio.ipynb
+++ b/nbs/00_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,13 @@
     "import asyncio\n",
     "from pydub import AudioSegment\n",
     "import io\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +59,20 @@
     "\n",
     "        data = await asyncio.to_thread(read_file, file_path)\n",
     "        return cls(data, format)\n",
+    "    \n",
+    "\n",
+    "    @classmethod\n",
+    "    async def from_ffmpeg_slice(cls, path, start, duration, format=\"mp3\"):\n",
+    "        def slice_and_get_data(path, start, duration):\n",
+    "            command = ['ffmpeg', '-ss', str(start), '-t', str(duration),\n",
+    "                       '-i', path, '-f', format, '-acodec', 'libmp3lame', '-']\n",
+    "            result = subprocess.run(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "            return result.stdout\n",
+    "\n",
+    "        data = await asyncio.to_thread(slice_and_get_data, path, start, duration)\n",
+    "        return cls(data, format)\n",
+    "    \n",
+    "\n",
     "\n",
     "    async def export2file(self, export_path, start=None, end=None):\n",
     "        def export(segment, export_path):\n",
@@ -95,24 +110,27 @@
     "\n",
     "        await asyncio.to_thread(append_, additional_data)\n",
     "\n",
-    "    def append_raw_audio(self, raw_data):\n",
-    "        frame_rate = self.audio.frame_rate\n",
-    "        sample_width = self.audio.sample_width\n",
-    "        channels = self.audio.channels\n",
-    "        frame_size = sample_width * channels\n",
-    "\n",
-    "        # Ensure the data length is a multiple of the frame size\n",
-    "        aligned_data_length = len(raw_data) - (len(raw_data) % frame_size)\n",
-    "        aligned_data = raw_data[:aligned_data_length]\n",
-    "\n",
-    "        new_segment = AudioSegment(\n",
-    "            data=aligned_data,\n",
-    "            sample_width=sample_width,\n",
-    "            frame_rate=frame_rate,\n",
-    "            channels=channels\n",
-    "        )\n",
-    "        self.audio = self.audio + new_segment\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "async def writestream2file(conn_id,redis_client):\n",
+    "    path = f'/app/testdata/{conn_id}.webm'\n",
+    "    item = True\n",
+    "    while item:\n",
+    "        item = await redis_client.rpop(f'initialFeed_audio:{conn_id}')\n",
+    "        if item:\n",
+    "            chunk = bytes.fromhex(json.loads(item)['chunk'])\n",
+    "            # Open the file in append mode\n",
+    "            with open(path, 'ab') as file:\n",
+    "                # Write data to the file\n",
+    "                file.write(chunk)"
    ]
   },
   {
@@ -128,16 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/app/testdata/david_audio.webm'\n",
+    "#path = '/home/dima/0/1_audio/testdata/david_audio.webm'\n",
+    "audio_obj = await AudioSlicer.from_ffmpeg_slice(path,0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3893.82"
+       "10.032"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
