--- a/nbs/00_redis.ipynb
+++ b/nbs/00_redis.ipynb
@@ -37,16 +37,34 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_67834/288385827.py:9: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
-    "import redis.asyncio as aioredis\n",
-    "from pydantic import BaseModel\n",
-    "from typing import Optional,Union,List, Literal\n",
-    "from dataclasses import dataclass\n",
-    "import redis\n",
-    "import json\n",
-    "import pandas as pd\n"
+    "try:\n",
+    "    import redis.asyncio as aioredis\n",
+    "    from pydantic import BaseModel\n",
+    "    from typing import Optional,Union,List, Literal\n",
+    "    from dataclasses import dataclass\n",
+    "    import redis\n",
+    "    import json\n",
+    "    import pandas as pd\n",
+    "except:\n",
+    "    pass\n"
    ]
   },
   {
@@ -60,7 +78,7 @@
     "async def get_inner_redis():\n",
     "    \n",
     "    db = await aioredis.from_url(\n",
-    "            \"redis://redis:6379/0\",decode_responses=True\n",
+    "            \"redis://redis/0\",decode_responses=True\n",
     "        )\n",
     "\n",
     "    await db.ping()\n",
@@ -74,17 +92,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client = await get_inner_redis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Redis<ConnectionPool<Connection<host=redis,port=6379,db=0>>>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| export\n",
     "\n",
-    "async def get_stream_redis():\n",
+    "async def get_stream_redis(host = 'host.docker.internal'):\n",
     "    \n",
     "    db = await aioredis.from_url(\n",
-    "            \"redis://host.docker.internal:6380/0\",decode_responses=True\n",
+    "            f\"redis://{host}:6380/0\",decode_responses=True\n",
     "        )\n",
     "\n",
     "    await db.ping()\n",
     "\n",
     "    return db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Redis<ConnectionPool<Connection<host=host.docker.internal,port=6380,db=0>>>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await get_stream_redis()"
    ]
   },
   {
