--- a/nbs/03_audio_processor_from_file.ipynb
+++ b/nbs/03_audio_processor_from_file.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,55 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "redis_inner_client = asyncio.run(get_inner_redis())\n",
     "client_id = '851f343e-4954-4f0a-8835-9664cc91c181'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "\n",
-    "@dataclass\n",
-    "class Notification:\n",
-    "    channel_name: str\n",
-    "    redis_client: aioredis.Redis\n",
-    "\n",
-    "    async def initialize(self):\n",
-    "     #   self.redis_client = await get_inner_redis()\n",
-    "        async with self.redis_client.pubsub() as sub:\n",
-    "            await sub.subscribe(self.channel_name)\n",
-    "\n",
-    "    async def wait(self, msg):\n",
-    "        async with self.redis_client.pubsub() as sub:\n",
-    "            await sub.subscribe(self.channel_name)\n",
-    "            while True:\n",
-    "                r = await sub.get_message(ignore_subscribe_messages=True)\n",
-    "                if r and r['data'] == msg:\n",
-    "                    print('done')\n",
-    "                    break\n",
-    "                await asyncio.sleep(0)  # Yield control"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "diarize_ready_notification = Notification('DiarizeReady',redis_inner_client)\n",
-    "asyncio.run(diarize_ready_notification.initialize())\n",
-    "transcribe_ready_notification = Notification('TranscribeReady',redis_inner_client)\n",
-    "asyncio.run(transcribe_ready_notification.initialize())"
    ]
   },
   {
@@ -120,24 +78,27 @@
    "source": [
     "#| export\n",
     "async def diarize(audio_data, client_id, audio_name, shift):\n",
+    "    redis_inner_client = await get_inner_redis()\n",
     "    audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
     "    await audio.save()\n",
     "    await redis_inner_client.lpush('Audio2DiarizeQueue', f'{audio_name}:{client_id}')\n",
-    "    await diarize_ready_notification.wait(audio_name)\n",
+    "    done = await redis_inner_client.brpop(f'DiarizeReady:{audio_name}')\n",
     "    diarization = Diarisation(audio_name, redis_inner_client)\n",
     "    await diarization.get()\n",
     "    df = pd.DataFrame(diarization.data)\n",
-    "    df['silence'] = df['start']-df['end'].shift()\n",
-    "    df['speaker_change'] = df['speaker'] != df['speaker'].shift()\n",
-    "    df['len'] = df['end'] - df['start']\n",
-    "    df = df[df['len'] > 0.5]\n",
-    "    df['speaker_change'] = np.where(df['silence']>2,True,df['speaker_change'])\n",
+    "    if len(df)>0:\n",
+    "        df['silence'] = df['start']-df['end'].shift()\n",
+    "        df['speaker_change'] = df['speaker'] != df['speaker'].shift()\n",
+    "        df['len'] = df['end'] - df['start']\n",
+    "        df = df[df['len'] > 0.5]\n",
+    "        df['speaker_change'] = np.where(df['silence']>2,True,df['speaker_change'])\n",
     "\n",
-    "    df['speaker_change'] = df['speaker_change'].cumsum()\n",
-    "    df = df.groupby('speaker_change').agg({'speaker': 'first', 'start': 'first', 'end': 'last'})\n",
-    "    df['conv_start'] = df['start'] + shift\n",
-    "    df['conv_end'] = df['end'] + shift\n",
-    "    return df.to_dict('records')"
+    "        df['speaker_change'] = df['speaker_change'].cumsum()\n",
+    "        df = df.groupby('speaker_change').agg({'speaker': 'first', 'start': 'first', 'end': 'last'})\n",
+    "        df['conv_start'] = df['start'] + shift\n",
+    "        df['conv_end'] = df['end'] + shift\n",
+    "        return df.to_dict('records')\n",
+    "    else: return df"
    ]
   },
   {
@@ -147,19 +108,23 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "\n",
+    "import time\n",
     "async def transcribe(diarization_result,connection_id,audio_name):\n",
+    "    redis_inner_client = await get_inner_redis()\n",
     "    for segment in diarization_result:\n",
     "        segment['connection_id'] = connection_id\n",
     "        segment['name'] = str(uuid.uuid4())\n",
     "        segment['audio_id'] = audio_name\n",
+    "        print('lpush')\n",
     "        await redis_inner_client.lpush('TranscribeQueue', json.dumps(segment))\n",
-    "        await transcribe_ready_notification.wait(segment['name'])\n",
-    "       # wait_notification(transcribe_ready_notification,segment['name'])\n",
+    "        print('brpop')\n",
+    "        done = await redis_inner_client.brpop(f'TranscribeReady:{segment[\"name\"]}')\n",
+    "        print('done')\n",
     "        transcription = Transcript(segment[\"name\"],redis_inner_client)\n",
     "        await transcription.get()\n",
     "        segment['transcription'] = transcription.data\n",
-    "        await redis_inner_client.lpush(f'Segment:{connection_id}', json.dumps(segment))\n",
-    "        await redis_inner_client.publish(f'SegmentReady', segment[\"name\"])"
+    "        await redis_inner_client.lpush(f'Segment:{connection_id}', json.dumps(segment))"
    ]
   },
   {
@@ -871,9 +836,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "langchain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -885,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
