--- a/nbs/00_redis.ipynb
+++ b/nbs/00_redis.ipynb
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_67834/288385827.py:9: DeprecationWarning: \n",
+      "/tmp/ipykernel_338381/288385827.py:9: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,35 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_66261/648225756.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
    "source": [
     "#| export\n",
     "\n",
-    "async def get_connection_queues(name, redis_client, min_length=1, pattern='*'):\n",
+    "async def get_connections_df(name, redis_client, min_length=1, pattern='*'):\n",
     "    \"\"\"\n",
     "    Finds queues that match a given pattern and have a minimum number of items,\n",
     "    and returns a DataFrame with queue names and their lengths.\n",
@@ -224,6 +202,30 @@
     "        'length': queue_lengths\n",
     "    }\n",
     "    return pd.DataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "async def get_connections(name, redis_client, min_length=1, pattern='*'):\n",
+    "    \"\"\"\n",
+    "    Finds queues that match a given pattern and have a minimum number of items,\n",
+    "    and returns a DataFrame with queue names and their lengths.\n",
+    "    \"\"\"\n",
+    "    matching_queues = []\n",
+    "    queue_lengths = []\n",
+    "    cursor = '0'\n",
+    "    while cursor != 0:\n",
+    "        cursor, keys = await redis_client.scan(cursor, match=f'{name}:{pattern}', count=min_length)\n",
+    "        for key in keys:\n",
+    "            if await redis_client.type(key) == 'list' and await redis_client.llen(key) >= min_length:\n",
+    "                matching_queues.append(key)\n",
+    "\n",
+    "    return matching_queues"
    ]
   },
   {
