--- a/nbs/99_diarize.ipynb
+++ b/nbs/99_diarize.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "%load_ext autoreload\n",
@@ -20,77 +29,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qdrant_client import QdrantClient\n",
-    "client = QdrantClient(\"qdrant\", port=6333)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from qdrant_client.http.models import Distance, VectorParams\n",
     "from qdrant_client.http.models import PointStruct\n",
     "from uuid import uuid4\n",
     "from pyannote.audio import Pipeline\n",
     "import io\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from qdrant_client import QdrantClient\n",
+    "from audio.redis import *\n",
+    "import asyncio\n",
+    "import torch\n",
+    "\n",
+    "client = QdrantClient(\"qdrant\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = '23fw3-adg34-asdg34-sdg'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "def get_stored_knn(emb:list, client_id):\n",
     "    search_result = client.search(\n",
     "        collection_name=client_id, query_vector=emb, limit=1)\n",
     "    if len(search_result)>0:\n",
     "        search_result = search_result[0]\n",
     "        return search_result.payload['speaker_id'], search_result.score\n",
-    "    else: return None,None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#client.delete_collection([c.name for c in client.get_collections().collections][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    else: return None,None\n",
+    "\n",
     "def create_collection_ifnotexists(client_id):\n",
     "    if not client_id in [c.name for c in client.get_collections().collections]:\n",
     "        client.create_collection(\n",
     "            collection_name=client_id,\n",
     "            vectors_config=VectorParams(size=256, distance=Distance.COSINE),\n",
-    "        )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        )\n",
+    "\n",
+    "\n",
     "def add_new_speaker_emb(emb:list,client_id,speaker_id=None):\n",
     "    speaker_id = speaker_id if speaker_id else str(uuid4())\n",
     "\n",
@@ -101,15 +79,10 @@
     "\n",
     "    )\n",
     "\n",
-    "    return speaker_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return speaker_id\n",
+    "\n",
+    "\n",
+    "\n",
     "def process_speaker_emb(emb:list,client_id):\n",
     "    speaker_id, score = get_stored_knn(emb, client_id)\n",
     "    print(score)\n",
@@ -123,32 +96,75 @@
     "    else:\n",
     "        speaker_id = add_new_speaker_emb(emb,client_id)\n",
     "\n",
-    "    return str(speaker_id), score"
+    "    return str(speaker_id), score\n",
+    "\n",
+    "\n",
+    "def parse_segment(segment):\n",
+    "    return segment[0].start, segment[0].end,int(segment[-1].split('_')[1])\n",
+    "\n",
+    "async def process(redis_client):\n",
+    "    # try:\n",
+    "    _,item = await redis_client.brpop('Audio2DiarizeQueue')\n",
+    "    audio_name,client_id = item.split(':')\n",
+    "    create_collection_ifnotexists(client_id)\n",
+    "    audio = Audio(audio_name,redis_client)\n",
+    "    #diarization = Diarisation(audio_name,redis_client)\n",
+    "    if await audio.get():\n",
+    "        print('here')\n",
+    "        output, embeddings = pipeline(io.BytesIO(audio.data), return_embeddings=True)\n",
+    "        if len(embeddings)==0: audio.delete()\n",
+    "    speakers =[process_speaker_emb(e,client_id)[0] for e in embeddings]\n",
+    "    segments = [i for i in output.itertracks(yield_label=True)]\n",
+    "    df = pd.DataFrame([parse_segment(s) for s in segments],columns = ['start','end','speaker'])\n",
+    "    df['speaker'] = df['speaker'].replace({i:s for i,s in enumerate(speakers)})\n",
+    "    diarization_data = df.to_dict('records')\n",
+    "    await Diarisation(audio_name,redis_client,diarization_data).save()\n",
+    "    print('done')\n",
+    "    # except Exception as e:\n",
+    "    #     print(e)\n",
+    "    # finally:\n",
+    "    await redis_client.lpush(f'DiarizeReady:{audio_name}', 'Done')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def parse_segment(segment):\n",
-    "    return segment[0].start, segment[0].end,int(segment[-1].split('_')[1])"
+    "\n",
+    "async def main():\n",
+    "    redis_client = await get_inner_redis()\n",
+    "    try:\n",
+    "        while True:\n",
+    "            await process(redis_client)\n",
+    "    except KeyboardInterrupt:\n",
+    "        pass \n",
+    "    finally:\n",
+    "        redis_client.close()\n",
+    "      #  await redis_client.wait_closed()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "torchvision is not available - cannot save figures\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<pyannote.audio.pipelines.speaker_diarization.SpeakerDiarization at 0x7f6de23c25c0>"
+       "<pyannote.audio.pipelines.speaker_diarization.SpeakerDiarization at 0x7fe164669d80>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,23 +174,12 @@
     "pipeline = Pipeline.from_pretrained(\n",
     "    \"pyannote/speaker-diarization-3.1\",\n",
     "    use_auth_token=\"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\")\n",
-    "\n",
-    "import torch\n",
     "pipeline.to(torch.device(\"cuda\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from audio.redis import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,23 +188,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "_,item = await redis_client.brpop('Audio2DiarizeQueue')\n",
     "audio_name,client_id = item.split(':')\n",
     "create_collection_ifnotexists(client_id)\n",
     "audio = Audio(audio_name,redis_client)\n",
-    "#diarization = Diarisation(audio_name,redis_client)\n",
+    "#diarization = Diarisation(audio_name,redis_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await audio.get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output, embeddings = pipeline(io.BytesIO(audio.data), return_embeddings=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "if await audio.get():\n",
     "    print('here')\n",
     "    output, embeddings = pipeline(io.BytesIO(audio.data), return_embeddings=True)\n",
@@ -210,9 +245,26 @@
     "df['speaker'] = df['speaker'].replace({i:s for i,s in enumerate(speakers)})\n",
     "diarization_data = df.to_dict('records')\n",
     "await Diarisation(audio_name,redis_client,diarization_data).save()\n",
-    "await redis_client.publish(f'DiarizeReady', audio_name)\n",
-    "print('done')"
+    "print('done')\n",
+    "# except Exception as e:\n",
+    "#     print(e)\n",
+    "# finally:\n",
+    "await redis_client.lpush(f'DiarizeReady:{audio_name}', 'Done')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
