--- a/nbs/99_diarize.ipynb
+++ b/nbs/99_diarize.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "%load_ext autoreload\n",
@@ -25,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from qdrant_client.http.models import Distance, VectorParams\n",
     "from qdrant_client.http.models import PointStruct\n",
@@ -41,6 +41,15 @@
     "import torch\n",
     "\n",
     "client = QdrantClient(\"qdrant\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#client.delete_collection(client.get_collections().collections[0].name)"
    ]
   },
   {
@@ -87,9 +96,9 @@
     "    speaker_id, score = get_stored_knn(emb, client_id)\n",
     "    print(score)\n",
     "    if speaker_id:\n",
-    "        if score > 0.9:\n",
+    "        if score > 0.95:\n",
     "            pass\n",
-    "        elif score > 0.6:\n",
+    "        elif score > 0.9:\n",
     "            add_new_speaker_emb(emb,client_id,speaker_id=speaker_id)\n",
     "        else:\n",
     "            speaker_id = add_new_speaker_emb(emb,client_id)\n",
