transcribe in parallel

--- a/nbs/05.transcribe.ipynb
+++ b/nbs/05.transcribe.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "%load_ext autoreload\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,92 +40,54 @@
     "import asyncio\n",
     "\n",
     "model_size = \"large-v3\"\n",
-    "redis_client = await get_redis()\n",
+    "redis_client = await get_inner_redis()\n",
     "\n",
     "model = WhisperModel(model_size, device=\"cuda\", compute_type=\"float16\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "async def process():\n",
-    "    _,segment = await redis_client.brpop('TranscribeQueue')\n",
-    "    segment = json.loads(segment)\n",
-    "    audio = Audio(segment['audio_id'],redis_client)\n",
-    "    if await audio.get():\n",
-    "        print(segment['name'])\n",
-    "    try:\n",
-    "        audio_data_slicer = AudioSlicer(audio.data)\n",
-    "        segment_audio_data = await audio_data_slicer.export_data(segment['start'],segment['end'])\n",
-    "\n",
-    "        segments, _ = model.transcribe(io.BytesIO(segment_audio_data), beam_size=5)\n",
-    "        data = [{'start':s.start, 'end':s.end, 'text':s.text} for s in list(segments)]\n",
-    "        await Transcript(segment['name'],redis_client,data).save()\n",
-    "        await redis_client.publish(f'TranscribeReady', segment[\"name\"])\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        await redis_client.publish(f'TranscribeReady', segment[\"name\"])\n",
-    "\n"
+    "_,item = await redis_client.brpop('Audio2TranscribeQueue')\n",
+    "audio_name,client_id = item.split(':')\n",
+    "audio = Audio(audio_name,redis_client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_,segment = await redis_client.brpop('TranscribeQueue')\n",
-    "segment = json.loads(segment)\n",
-    "audio = Audio(segment['audio_id'],redis_client)\n",
-    "if await audio.get():\n",
-    "    print(segment['name'])\n",
-    "\n",
-    "audio_data_slicer = AudioSlicer(audio.data)\n",
-    "segment_audio_data = await audio_data_slicer.export_data(segment['start'],segment['end'])\n",
-    "\n",
-    "segments, _ = model.transcribe(io.BytesIO(segment_audio_data), beam_size=5)\n",
-    "data = [{'start':s.start, 'end':s.end, 'text':s.text} for s in list(segments)]\n",
-    "await Transcript(segment['name'],redis_client,data).save()\n",
-    "await redis_client.publish(f'TranscribeReady', segment[\"name\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e929ea4c-2d63-45eb-90d9-2d1d6e161564\n",
-      "[Errno 2] No such file or directory: 'ffprobe'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/pydub/utils.py:198: RuntimeWarning: Couldn't find ffprobe or avprobe - defaulting to ffprobe, but may not work\n",
-      "  warn(\"Couldn't find ffprobe or avprobe - defaulting to ffprobe, but may not work\", RuntimeWarning)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "await process()\n"
+    "await audio.get()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "segments, _ = model.transcribe(io.BytesIO(audio.data), beam_size=5,vad_filter=True,word_timestamps=True)\n",
+    "segments = [s for s in list(segments)]\n",
+    "transcription = [[w._asdict() for w in s.words] for s in segments]\n",
+    "await Transcript(audio_name,redis_client,transcription).save()\n",
+    "await redis_client.lpush(f'TranscribeReady:{audio_name}', 'Done')"
+   ]
   }
  ],
  "metadata": {
@@ -135,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
