--- a/nbs/03_audio_processor_from_stream.ipynb
+++ b/nbs/03_audio_processor_from_stream.ipynb
@@ -225,7 +225,10 @@
    "outputs": [],
    "source": [
     "connections =  await get_connections('initialFeed_audio',redis_stream_client)\n",
-    "connection_id = connections[0].replace('initialFeed_audio:','')\n"
+    "connection_ids = [c.replace('initialFeed_audio:','') for c in connections]\n",
+    "\n",
+    "\n",
+    "connections =  await get_connections('initialFeed_audio',redis_stream_client)\n"
    ]
   },
   {
