--- a/nbs/99_diarize.ipynb
+++ b/nbs/99_diarize.ipynb
@@ -45,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#client.delete_collection(client.get_collections().collections[0].name)"
    ]
