qdrant single collection

--- a/nbs/99_diarize.ipynb
+++ b/nbs/99_diarize.ipynb
@@ -16,26 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from qdrant_client.http.models import Distance, VectorParams\n",
-    "from qdrant_client.http.models import PointStruct\n",
+    "\n",
     "from uuid import uuid4\n",
     "from pyannote.audio import Pipeline\n",
     "import io\n",
     "import pandas as pd\n",
-    "from qdrant_client import QdrantClient\n",
+    "from qdrant_client import QdrantClient, models\n",
     "from audio.redis import *\n",
     "import asyncio\n",
     "import torch\n",
@@ -45,11 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#client.delete_collection(client.get_collections().collections[0].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# client.create_collection(\n",
+    "#     collection_name='main',\n",
+    "#     vectors_config=models.VectorParams(size=256, distance=models.Distance.COSINE),\n",
+    "#     hnsw_config=models.HnswConfigDiff(\n",
+    "#         payload_m=16,\n",
+    "#         m=0,\n",
+    "#     ),\n",
+    "# )\n",
+    "# client.create_payload_index(\n",
+    "#     collection_name='main',\n",
+    "#     field_name=\"client_id\",\n",
+    "#     field_schema=models.PayloadSchemaType.KEYWORD,\n",
+    "# )"
    ]
   },
   {
