--- a/nbs/03_audio_processor_from_stream.ipynb
+++ b/nbs/03_audio_processor_from_stream.ipynb
@@ -330,11 +330,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.312\n"
+     ]
+    }
+   ],
    "source": [
-    "rlen=0"
+    "await writestream2file(connection_id,redis_stream_client)\n",
+    "audio_slicer = await AudioSlicer.from_ffmpeg_slice(path,start,start+max_length)\n",
+    "\n",
+    "slice_duration = audio_slicer.audio.duration_seconds\n",
+    "print(slice_duration)\n",
+    "\n",
+    "if slice_duration > step:\n",
+    "\n",
+    "    audio_data = await audio_slicer.export_data()\n",
+    "    audio_name = str(uuid.uuid4())\n",
+    "    audio = Audio(chunk_name=audio_name, redis_client=redis_inner_client, data=audio_data)\n",
+    "    await audio.save()\n",
+    "\n",
+    "    diarization_result, transcription_result = await asyncio.gather(\n",
+    "            diarize(client_id, audio_name, start,redis_inner_client),\n",
+    "            transcribe(audio_name,redis_inner_client)\n",
+    "        )\n",
+    "    \n",
+    "    start_ = await get_next_chunk_start(redis_inner_client, audio_name, slice_duration,start)\n",
+    "    start = start_ if start_ else start+slice_duration"
    ]
   },
   {
