--- a/nbs/99_diarize.ipynb
+++ b/nbs/99_diarize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from uuid import uuid4\n",
@@ -35,32 +44,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#client.delete_collection(client.get_collections().collections[0].name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult(operation_id=1, status=<UpdateStatus.COMPLETED: 'completed'>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# client.create_collection(\n",
-    "#     collection_name='main',\n",
-    "#     vectors_config=models.VectorParams(size=256, distance=models.Distance.COSINE),\n",
-    "#     hnsw_config=models.HnswConfigDiff(\n",
-    "#         payload_m=16,\n",
-    "#         m=0,\n",
-    "#     ),\n",
-    "# )\n",
-    "# client.create_payload_index(\n",
-    "#     collection_name='main',\n",
-    "#     field_name=\"client_id\",\n",
-    "#     field_schema=models.PayloadSchemaType.KEYWORD,\n",
-    "# )"
+    "client.create_collection(\n",
+    "    collection_name='main',\n",
+    "    vectors_config=models.VectorParams(size=256, distance=models.Distance.COSINE),\n",
+    "    hnsw_config=models.HnswConfigDiff(\n",
+    "        payload_m=16,\n",
+    "        m=0,\n",
+    "    ),\n",
+    ")\n",
+    "client.create_payload_index(\n",
+    "    collection_name='main',\n",
+    "    field_name=\"client_id\",\n",
+    "    field_schema=models.PayloadSchemaType.KEYWORD,\n",
+    ")"
    ]
   },
   {
