--- a/nbs/00_redis.ipynb
+++ b/nbs/00_redis.ipynb
@@ -70,6 +70,25 @@
    "source": [
     "#| export\n",
     "\n",
+    "async def get_redis(host = 'host.docker.internal',port=6380):\n",
+    "    \n",
+    "    db = await aioredis.from_url(\n",
+    "            f\"redis://{host}:{port}/0\",decode_responses=True\n",
+    "        )\n",
+    "\n",
+    "    await db.ping()\n",
+    "\n",
+    "    return db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
     "async def get_inner_redis():\n",
     "    \n",
     "    db = await aioredis.from_url(\n",
@@ -518,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "2.7.0"
   }
  },
  "nbformat": 4,
