--- a/nbs/test.ipynb
+++ b/nbs/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,12 +51,12 @@
     "\n",
     "from audio.redis import Transcript\n",
     "\n",
-    "running_tasks = set()\n"
+    "running_tasks = set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
